2008-09-04  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* ucm.el (ucm-actb-create-ewoc): 375 add the stream to the ewoc
	header.

2008-09-02  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* vc-clearcase.el (cleartool-wait-for): accept a nil `tid' as an
	argument.
	(clearcase-fprop): new slots: activity^, activity-tid^, renamed
	comment^ and comment-tid^ from comment and comment-tid.
	(clearcase-reset-fprop): clear comment-tid^, comment^,
	activity-tid^ and activity^ slots
	(clearcase-fprop-comment, clearcase-fprop-activity): new
	functions.
	(vc-start-entry): no need to wait for the comment tid,
	`clearcase-fprop-comment' does that
	(vc-clearcase-state): fetch the comment and activity (in an UCM
	view) if the file is checked out.

2008-08-29  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* vc-clearcase.el (vc-clearcase-print-log): only print the history
	of the current branch by default.  Print full history when the
	prefix arg is specified.

2008-08-26  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* vc-clearcase.el (clearcase-edcs-font-lock-keywords): new
	variable
	(clearcase-edcs-mode-syntax-table): new variable
	(clearcase-edcs-mode): add proper syntax highlighting to
	configspecs.

2008-08-22  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* ucm.el (ucm-lsact-activity-pp): don't print the owner of the
	activity.
	(ucm-actb-ediff-command): new function
	(ucm-actb-mode-map): add binding for `ucm-actb-ediff-command'

	* vc-clearcase.el (vc-clearcase-cancel-version): In a snapshot
	view, don't delete the file before updating it; also use "update
	-overwrite -force"

2008-07-31  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* ucm.el (ucm-actb-visit-item-command): new function
	(ucm-actb-mode-map): add binding for `ucm-actb-visit-item-command'

2008-07-29  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* ucm.el (ucm-list-activities): DIR is now optional and defaults